--- a/page.css
+++ b/page.css
@@ -11,8 +11,9 @@ body
 
 div .logo
 {
-    width: 80px;
-    border-radius: 12px 10px 10px 10px;
+    width: 10%;
+    height: 5%;
+    border-radius: 30px 10px 20px 50px;
     
 }
 .title1
@@ -100,7 +101,7 @@ nav ul li
 
 .images
 {
-    width: 150px;
+    width: 15%;
     padding: 35px;
     
 }
@@ -124,14 +125,11 @@ nav ul li
 .images1
 {
     padding: 20px;
-    width: 400px;
-    height: 250px;
+    width: 50vh;
+    height: 40vh;
+   
 }
 
-.contenair3
-{
-    
-}
 .contenair4
 {
     display: flex;
@@ -139,8 +137,8 @@ nav ul li
 
 .photo4
 {
-    width: 500px;
-    height: 700px;
+    width: 80vh;
+    height: 80vh;
     padding: 50px;
 }
 
@@ -149,10 +147,6 @@ nav ul li
     padding-top: 90px;
 }
 
-.icone
-{
-    
-}
 
 .title4
 {
@@ -166,7 +160,36 @@ nav ul li
 .fphoto
 {
     width: 140vh;
-    height: 80vh;
+    height: 90vh;
     padding-left: 20%;
+}
+
+.lien2
+{
+    position: absolute;
+    padding-top: 250px;
+}
+
+
+.contenair6
+{
+    display: flex;
+    padding: 50px;
+}
+
+footer ul li 
+{
+    list-style: none;
+    width: 250px;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+footer img 
+{
+    width: 5%;
+    height: 5%;
+    border-radius: 30px 10px 20px 50px;
+   
 }
 
